# solid-rk2

./: CMakeLists.txt  build_and_test.sh
.github/workflows/: build_test_release.yml
CaseStudies/ApprovalSystem/: ApprovalSystem.vcxproj
CaseStudies/BankAccount/: BankAccount.vcxproj
CaseStudies/CountingObjects/: CountingObjects.vcxproj
CaseStudies/DependencyInversionPrinciple/: DependencyInversionPrinciple.vcxproj
CaseStudies/GeneratingPasswords/: GeneratingPasswords.vcxproj
CaseStudies/NotificationSender/: NotificationSender.vcxproj
CaseStudies/ObservableVector/: ObservableVectorContainer.vcxproj
CaseStudies/Pimpl/: Pimpl.vcxproj
CaseStudies/Semigraphics/: Semigraphics.vcxproj
CaseStudies/StorageExplorer/: StorageExplorer.vcxproj
CaseStudies/TextProcessor/: TextProcessor.vcxproj
CaseStudies/TrafficLight/: TrafficLight.vcxproj
CaseStudies/ValidatingPasswords/: ValidatingPasswords.vcxproj
Patterns/AbstractClassVsInterface/: AbstractClassVsInterface.vcxproj
Patterns/AbstractFactory/: AbstractFactory.vcxproj
Patterns/AdapterPattern/: AdapterPattern.vcxproj
Patterns/Bridge/: Bridge.vcxproj
Patterns/Builder/: Builder.vcxproj
Patterns/ChainOfResponsibility/: ChainOfResponsibility.vcxproj
Patterns/CommandPattern/: CommandPattern.vcxproj
Patterns/CompositePattern/: CompositePattern.vcxproj
Patterns/DecoratorPattern/: DecoratorPattern.vcxproj
Patterns/Facade/: Facade.vcxproj
Patterns/FactoryMethod/: FactoryMethod.vcxproj
Patterns/Flyweight/: Flyweight.vcxproj
Patterns/MVC/: MVC.vcxproj
tests/: CMakeLists.txt  test_srp.cpp
(+22 files in other folders)
